# snake

./: .gitignore  CMakeLists.txt  README.md
include/: Food.h  Snake.h
src/: Food.cpp  Snake.cpp  main.cpp
